deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-astratex
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: hello-astratex
  template:
    metadata:
      labels:
        app: hello-astratex
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
