svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-astratex
spec:
  selector:
    app: hello-astratex
  ports:
    - port: 80
      targetPort: http
